@@ -134,6 +134,12 @@ val input : t -> bytes -> int -> int -> int
     @raise Invalid_argument if [pos] and [len] do not designate a valid range of
     [buf]. *)
 
+val input_bigarray :
+  t -> (_, Bigarray.int8_unsigned_elt, Bigarray.c_layout) Bigarray.Array1.t ->
+  int -> int -> int
+(** Same as {!input}, but read the data into a bigarray.
+    @since 5.2 *)
+
 val really_input : t -> bytes -> int -> int -> unit option
 (** [really_input ic buf pos len] reads [len] characters from channel [ic],
     storing them in byte sequence [buf], starting at character number [pos].
@@ -146,6 +152,12 @@ val really_input : t -> bytes -> int -> int -> unit option
 
     @raise Invalid_argument if [pos] and [len] do not designate a valid range of
     [buf]. *)
+
+val really_input_bigarray :
+  t -> (_, Bigarray.int8_unsigned_elt, Bigarray.c_layout) Bigarray.Array1.t ->
+  int -> int -> unit option
+(** Same as {!really_input}, but read the data into a bigarray.
+    @since 5.2 *)
 
 val fold_lines : ('acc -> string -> 'acc) -> 'acc -> t -> 'acc
 (** [fold_lines f init ic] reads lines from [ic] using {!input_line}
